LDEV-4103 - handle BigDecimal whn converting to string